<resources>
    <string name="app_name">WeatherApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome</string>
    <string name="location">Location</string>
    <string name="gps">GPS</string>
    <string name="map">Map</string>
    <string name="notification">Notification</string>
    <string name="done">Done</string>
    <string name="searchLocation">Search For Location</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="ok">ok</string>
    <string name="favorite">Favorite</string>
    <string name="home">Home</string>
    <string name="alert">Alerts</string>
    <string name="hour">Hour</string>
    <string name="temperature">Temperature</string>
    <string name="day">Day</string>
    <string name="weatherDescription">Weather Description</string>
    <string name="minMaxValue">min/max C</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="c">c</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="cloud">Cloud</string>
    <string name="ultravioldet">UltraViolet</string>
    <string name="visibility">Visibility</string>
    <string name="cityName">CityName</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="windSpeed">Wind Speed</string>
    <string name="celcuis">Celsius</string>
    <string name="kelvin">Kelvin</string>
    <string name="fahernheit">Fahrenheit</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="msec">M/SEC</string>
    <string name="hk">K/Hour</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="alarmdetails">Alarm Details</string>
    <string name="alarm">Alarm</string>
    <string name="startDate">Start Date</string>
    <string name="endDate">End Date</string>
    <string name="setAlarm">Set Alarm</string>
    <string name="alarmName">Alarm Name</string>
</resources>