<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardMaxElevation="12dp"
    app:cardElevation="10dp"
    app:cardCornerRadius="20dp"
    app:cardBackgroundColor="@color/white"
    android:layout_margin="5dp"
    app:cardPreventCornerOverlap="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/dayTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day"
            app:layout_constraintBottom_toBottomOf="@+id/dayImageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/dayImageView"
            />

        <ImageView
            android:id="@+id/dayImageView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/cloud_ic"
            app:layout_constraintBottom_toBottomOf="@+id/minTV"
            app:layout_constraintStart_toEndOf="@+id/dayTV"
            app:layout_constraintEnd_toStartOf="@id/weatherDescTV"
            app:layout_constraintTop_toTopOf="@+id/minTV" />

        <TextView
            android:id="@+id/weatherDescTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/weatherDescription"
            app:layout_constraintEnd_toStartOf="@+id/minTV"
            app:layout_constraintHorizontal_bias="0.526"
            app:layout_constraintStart_toEndOf="@+id/dayImageView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/minTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/min"
            app:layout_constraintBottom_toBottomOf="@+id/weatherDescTV"
            app:layout_constraintEnd_toStartOf="@id/maxTV"
            app:layout_constraintStart_toEndOf="@id/weatherDescTV"
            app:layout_constraintTop_toTopOf="@+id/weatherDescTV" />

        <TextView
            android:id="@+id/maxTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/max"
            app:layout_constraintBottom_toBottomOf="@id/minTV"
            app:layout_constraintEnd_toStartOf="@id/cTV"
            app:layout_constraintStart_toEndOf="@id/minTV"
            app:layout_constraintTop_toTopOf="@id/minTV" />

        <TextView
            android:id="@+id/cTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/c"
            app:layout_constraintBottom_toBottomOf="@id/maxTV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/maxTV"
            app:layout_constraintTop_toTopOf="@id/maxTV" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>