<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/alarmItem"
    app:cardMaxElevation="12dp"
    app:cardElevation="10dp"
    app:cardCornerRadius="20dp"
    app:cardBackgroundColor="@color/white"
    android:layout_margin="5dp"
    app:cardPreventCornerOverlap="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <EditText
            android:id="@+id/nameAlarmED"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/alarmName"
            android:inputType="textPersonName"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/startDateTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="36dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/startDate"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameAlarmED" />

        <TextView
            android:id="@+id/endDateTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/endDate"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/showEndDate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/showEndDate"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/setAlarmTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/setAlarm"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/showEndDate" />

        <TextView
            android:id="@+id/showStartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/startDateTV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.815"
            app:layout_constraintStart_toEndOf="@+id/startDateTV"
            app:layout_constraintTop_toTopOf="@+id/startDateTV"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/showEndDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="TextView"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.82"
            app:layout_constraintStart_toEndOf="@+id/endDateTV"
            app:layout_constraintTop_toBottomOf="@+id/showStartDate" />

        <TextView
            android:id="@+id/showAlarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="TextView"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/setAlarmTV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.82"
            app:layout_constraintStart_toEndOf="@+id/setAlarmTV"
            app:layout_constraintTop_toBottomOf="@+id/showEndDate"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/doneAlarmBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/done"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/showAlarm"
            app:layout_constraintVertical_bias="0.077" />

        <TextView
            android:id="@+id/closeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="72dp"
            android:text="X"
            android:textSize="25dp"
            app:layout_constraintBottom_toTopOf="@+id/startDateTV"
            app:layout_constraintEnd_toStartOf="@+id/nameAlarmED"
            app:layout_constraintHorizontal_bias="0.604"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>